# gpio_control

./: .gitignore  README.md  mix.exs  pyproject.toml  rebar.config
config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
gpio_control/: control.py  main.py  temperature.py
gpio_control/templates/: index.html  switch.json
gpio_control/web/: handler.py  server.py
lib/: gpio_control.ex  gpio_control_web.ex
lib/gpio_control/: Pins.ex  application.ex
lib/gpio_control_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/gpio_control_web/channels/: user_socket.ex
lib/gpio_control_web/controllers/: page_controller.ex
lib/gpio_control_web/templates/layout/: app.html.eex
lib/gpio_control_web/templates/page/: index.html.eex  pin.html.eex
lib/gpio_control_web/views/: error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex
src/: gpio_control.app.src  gpio_control.erl  gpio_control_app.erl  gpio_control_sup.erl  health_handler.erl
test/: gpio_control_test.exs
test/gpio_control_web/controllers/: page_controller_test.exs
test/gpio_control_web/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
test/support/: channel_case.ex  conn_case.ex
tests/: test_gpio_control.py
