[tool.poetry]
name = "gpio-control"
version = "0.1.0"
description = ""
authors = ["Nathaniel Waisbrot <code@waisbrot.net>"]

[tool.poetry.dependencies]
python = "^3.7"
Jinja2 = "^2.11.3"
gpiozero = "^1.5.1"
"RPi.GPIO" = "^0.7.0"
adafruit-circuitpython-si7021 = "^3.3.3"
influxdb-client = "^1.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
control = "gpio_control.main:run"